# anystyle3dgs.github.io

./: .gitignore  README.md  claude.md  files.json  index.html  pyproject.toml  split_videos.py  video_splitter_view.ipynb
tex/: comparison.tex
