[project]
name = "anystyle3dgs-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.11.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "scikit-video>=1.1.11",
]
